--- a/env.example
+++ b/env.example
@@ -20,4 +20,10 @@ SUPABASE_ANON_KEY=your_supabase_anon_key
 SUPABASE_SERVICE_KEY=your_supabase_service_key
 
 # Server Configuration
-PORT=3000 
+PORT=3000
+
+# Amazon SES Configuration (Required for email functionality)
+AWS_REGION=us-east-1
+AWS_ACCESS_KEY_ID=your_aws_access_key_id
+AWS_SECRET_ACCESS_KEY=your_aws_secret_access_key
+SES_FROM_EMAIL=noreply@servicehub.mobisat.com 
