--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "dev": "nodemon server.js"
   },
   "dependencies": {
+    "@aws-sdk/client-ses": "^3.859.0",
     "@supabase/supabase-js": "^2.53.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
