--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@aws-sdk/client-ses": "^3.859.0",
     "@supabase/supabase-js": "^2.53.0",
     "cors": "^2.8.5",
+    "dotenv": "^17.2.1",
     "express": "^4.18.2",
     "node-fetch": "^2.7.0",
     "openai": "^5.10.2",
