feat: add odometer analytics card; clean WhatsApp login and remove unused files; improve certificates layout and i18n; add favicon pipeline and assets; enforce vehicle.odometer as authoritative; docs cleanup

--- a/env.example
+++ b/env.example
@@ -26,4 +26,9 @@ PORT=3000
 AWS_REGION=us-east-1
 AWS_ACCESS_KEY_ID=your_aws_access_key_id
 AWS_SECRET_ACCESS_KEY=your_aws_secret_access_key
-SES_FROM_EMAIL=noreply@servicehub.mobisat.com 
+SES_FROM_EMAIL=noreply@servicehub.mobisat.com
+
+# Twilio Configuration (for WhatsApp)
+TWILIO_ACCOUNT_SID=your_twilio_account_sid
+TWILIO_AUTH_TOKEN=your_twilio_auth_token
+TWILIO_WHATSAPP_FROM=whatsapp:+14155238886 
