--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "favicons": "node scripts/generate-favicons.js"
   },
   "dependencies": {
     "@aws-sdk/client-ses": "^3.859.0",
@@ -15,10 +16,12 @@
     "express": "^4.18.2",
     "node-fetch": "^2.7.0",
     "openai": "^5.10.2",
-    "pg": "^8.11.0"
+    "pg": "^8.11.0",
+    "twilio": "^5.8.0"
   },
   "devDependencies": {
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.0.1",
+    "sharp": "^0.33.5"
   },
   "keywords": [
     "service-hub",
