--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^4.18.2",
     "node-fetch": "^2.7.0",
     "openai": "^5.10.2",
+    "stripe": "^14.22.0",
     "pg": "^8.11.0",
     "twilio": "^5.8.0"
   },
