--- a/env.local.example
+++ b/env.local.example
@@ -19,6 +19,12 @@ AWS_ACCESS_KEY_ID=your_aws_access_key_id_here
 AWS_SECRET_ACCESS_KEY=your_aws_secret_access_key_here
 SES_FROM_EMAIL=noreply@servicehub.mobisat.com
 
+# Twilio Configuration (For WhatsApp and SMS)
+TWILIO_ACCOUNT_SID=your_twilio_account_sid_here
+TWILIO_AUTH_TOKEN=your_twilio_auth_token_here
+TWILIO_WHATSAPP_FROM=whatsapp:+14155238886
+TWILIO_SMS_FROM=+39xxxxxxxxx
+
 # Server Configuration
 PORT=3000
 NODE_ENV=development
