Rebranding completo: Service Hub  Service Portal
- Cambiato tutti i titoli delle pagine HTML da Service Hub Portal a Service Portal
- Aggiornato alt text di tutte le immagini logo nelle sidebar
- Modificato footer branding da SERVICE HUB PORTAL a SERVICE PORTAL
- Aggiornato server.js: messaggi, email, prodotti Stripe, comunicazioni WhatsApp
- Modificato js/email-service.js: subject e contenuto email PIN
- Aggiornato js/i18n.js: TUTTE le traduzioni titoli (italiano + inglese)
- Cambiato header comments in tutti i file JavaScript e config
- Aggiornato package.json description
- Sistemato file di backup HTML
- Aggiornato commenti nei componenti header/footer

Totale: 28+ file modificati per rebranding completo e consistente

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "service-hub-portal",
   "version": "1.0.0",
-  "description": "Service Hub Portal - Authentication and Dashboard for Mobisat Dealers",
+  "description": "Service Portal - Authentication and Dashboard for Mobisat Dealers",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
